Fix spacing issue with CourseList

--- a/src/css/CourseList.css
+++ b/src/css/CourseList.css
@@ -11,7 +11,7 @@
     border-color: transparent;
 }
 
-.courseListItem {
+.courseListGroup:not(:first-child) {
     margin-top: 10px;
 }
 
